--- a/frontend/index.html
+++ b/frontend/index.html
@@ -44,7 +44,7 @@
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl md:text-5xl font-bold mb-4" data-aos="fade-down">Your Complete College Companion</h1>
             <p class="text-xl mb-8" data-aos="fade-down" data-aos-delay="200">Stay organized with timetables, syllabus, events, holidays, exams, and personal tasks</p>
-            <button class="bg-white text-indigo-600 px-6 py-3 rounded-full font-semibold hover:bg-indigo-100 transition" data-aos="fade-up" data-aos-delay="400">Get Started</button>
+            
         </div>
     </section>
 
@@ -341,12 +341,11 @@
                 </div>
                 <div>
                     <h3 class="text-xl font-semibold mb-4">Contact</h3>
-                    <p class="text-gray-400">Email: info@collegeguide.com</p>
-                    <p class="text-gray-400">Phone: +1 (555) 123-4567</p>
+                    <p class="text-gray-400">Email: collegeguide77@gmail.com</p>
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2023 College Guide. All rights reserved.</p>
+                <p>&copy; 2025 College Guide. All rights reserved.</p>
             </div>
         </div>
     </footer>
