Refactor code structure for improved readability and maintainability

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -82,48 +82,86 @@
         <!-- Syllabus Section -->
         <section id="syllabus" class="mb-16" data-aos="fade-up">
             <h2 class="text-3xl font-bold mb-8 text-center text-gray-800">Course Syllabus</h2>
-            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
-                    <div class="flex items-center mb-4">
-                        <div class="bg-indigo-100 p-3 rounded-full mr-4">
-                            <i data-feather="book" class="text-indigo-600"></i>
-                        </div>
-                        <h3 class="text-xl font-semibold">Mathematics</h3>
-                    </div>
-                    <ul class="space-y-2">
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Calculus I & II</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Linear Algebra</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Differential Equations</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Probability & Statistics</li>
-                    </ul>
-                </div>
-                <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
-                    <div class="flex items-center mb-4">
-                        <div class="bg-indigo-100 p-3 rounded-full mr-4">
-                            <i data-feather="atom" class="text-indigo-600"></i>
-                        </div>
-                        <h3 class="text-xl font-semibold">Physics</h3>
-                    </div>
-                    <ul class="space-y-2">
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Mechanics</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Electromagnetism</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Thermodynamics</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Quantum Physics</li>
-                    </ul>
-                </div>
-                <div class="bg-white rounded-xl shadow-md p-6 hover:shadow-lg transition">
-                    <div class="flex items-center mb-4">
-                        <div class="bg-indigo-100 p-3 rounded-full mr-4">
-                            <i data-feather="flask" class="text-indigo-600"></i>
-                        </div>
-                        <h3 class="text-xl font-semibold">Chemistry</h3>
-                    </div>
-                    <ul class="space-y-2">
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Organic Chemistry</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Inorganic Chemistry</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Physical Chemistry</li>
-                        <li class="flex items-center"><i data-feather="check-circle" class="text-green-500 mr-2 h-4 w-4"></i> Analytical Chemistry</li>
-                    </ul>
+            <div class="bg-white rounded-xl shadow-md overflow-hidden">
+                <div class="overflow-x-auto">
+                    <table class="w-full">
+                        <thead class="bg-indigo-100">
+                            <tr>
+                                <th class="p-4 text-left">S.No.</th>
+                                <th class="p-4 text-left">Faculty Name</th>
+                                <th class="p-4 text-left">Course Name & Code</th>
+                                <th class="p-4 text-left">Syllabus Link</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">1</td>
+                                <td class="p-4">Dr Krishnanand Vishwakarma<br><small class="text-gray-500">Dr Ruchi Agrawal</small></td>
+                                <td class="p-4">Linear Algebra and Matrix Analysis (MA102C)<br>Calculus (MA101C)</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1xb-DHDayKng7_zormdMkkQsQmBlICX" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">2</td>
+                                <td class="p-4">Dr. Ruhul Amin, Dr. Satya, Dr. M K Rao<br><small class="text-gray-500">Dr. Mithilesh Kumar Chaube</small></td>
+                                <td class="p-4">Problem Solving with C Programming (CS101C)<br>Internet of Things</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1eYpOSw.iRqntBjpdO90JWiJsaVkenLLIKw" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">3</td>
+                                <td class="p-4">Dr. Aruna Shukla</td>
+                                <td class="p-4">International Language Competence - HS101C</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1oowxGQLbyMyYi3rG9lGSTcsLNlKrHmF" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">4</td>
+                                <td class="p-4">Dr. Harsh Sharma<br><small class="text-gray-500">Susmarparna Neha</small></td>
+                                <td class="p-4">International Language Competence<br>Fundamental of Cyber Security, IoT, AI & M.Tech</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1mHxTlFyeCom2YFqp00DBOlhWr7t5mEYj" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">5</td>
+                                <td class="p-4">Dr. Manoj Kumar Majumder</td>
+                                <td class="p-4">Digital Logic Design using Verilog (CSE)</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=13YXJLNog2aTywvvFezlAKWk6zrKvShHpm" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">6</td>
+                                <td class="p-4">Dr. Abhishek Sharma</td>
+                                <td class="p-4">Internet of Things (CS103C)</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1e4wWe4v7hI4DT5mnPmtcf7nTHHu-UBJAE" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">7</td>
+                                <td class="p-4">Amit Kumar Agrawal</td>
+                                <td class="p-4">Entrepreneurship & Design Thinking - VA102</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=134DpryzzaOGVWRo9ww67e2NoBSFmRfK" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">8</td>
+                                <td class="p-4">Mehfuz Ali</td>
+                                <td class="p-4">Digital Logic Design using Verilog, (Sem-1, ECE1)</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=11Emkcearn3u2dse1plvvCd9aPfK6tYVaT" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">9</td>
+                                <td class="p-4">Dr. Anurag Singh</td>
+                                <td class="p-4">Internet of Things (CS103C)</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1j746n_tit_kwVykRZHBu1pd-4i-DwlWVv" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">10</td>
+                                <td class="p-4">Dr. Shristhati Tripathi<br><small class="text-gray-500">Archana Sharma</small></td>
+                                <td class="p-4">Internet of Things (ECE)<br>Digital Logic Design using Verilog, EC101C</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1aRE" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                            <tr class="border-b hover:bg-gray-50">
+                                <td class="p-4">11</td>
+                                <td class="p-4">Srinivasa K G</td>
+                                <td class="p-4">IT Workshop: Software prototyping with AI Support</td>
+                                <td class="p-4"><a href="https://drive.google.com/u/0/open?usp=forms_web&id=1zkv1TplCm63x2gl9Vdw4lgpDFRV8ebD" target="_blank" class="text-indigo-600 hover:underline">View Syllabus</a></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </section>
